--- a/lib/alien_demo_web/templates/layout/app.html.eex
+++ b/lib/alien_demo_web/templates/layout/app.html.eex
@@ -13,6 +13,8 @@
         <nav role="navigation">
           <ul>
             <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <li><a href="<%= Routes.page_path(@conn, :index) %>">Welcome Page!</a></li>
+            <li><a href="<%= Routes.aliens_path(@conn, :index) %>">Aliens?</a></li>
           </ul>
         </nav>
         <a href="http://phoenixframework.org/" class="phx-logo">
