--- a/lib/alien_demo_web/templates/admin/comments/index.html.eex
+++ b/lib/alien_demo_web/templates/admin/comments/index.html.eex
@@ -3,3 +3,9 @@
 </div>
 <h3>Comments</h3>
 <p>Take a look at all of these comments for you!</p>
+<ul>
+  <li><a href="<%= Routes.admin_comments_path(@conn, :show, 123) %>">Comment # 123</a></li>
+  <li><a href="<%= Routes.admin_comments_path(@conn, :show, 124) %>">Comment # 124</a></li>
+  <li><a href="<%= Routes.admin_comments_path(@conn, :show, 125) %>">Comment # 125</a></li>
+  <li><a href="<%= Routes.admin_comments_path(@conn, :show, 404) %>">Comment # 404</a></li>
+</ul>
