updated comment for views, showing how to render in the view

--- a/lib/alien_demo_web/templates/admin/comments/edit.html.eex
+++ b/lib/alien_demo_web/templates/admin/comments/edit.html.eex
@@ -12,11 +12,11 @@
   <input type="submit" value="Submit Edits">
   <input type="hidden" name="_method" value="patch">
 
-<%= end %>
+<% end %>
 <div>
   <a href='<%= Routes.admin_comments_path(@conn, :show, @conn.params["id"]) %>'>Cancel Edit Comment</a>
   <%= form_for @conn, Routes.admin_comments_path(@conn, :delete, @conn.params["id"]), fn f -> %>
     <input type="submit" value="Delete this Comment">
     <input type="hidden" name="_method" value="delete">
-  <%= end %>
+  <% end %>
 </div>
