--- a/lib/alien_demo_web/templates/layout/app.html.eex
+++ b/lib/alien_demo_web/templates/layout/app.html.eex
@@ -15,6 +15,7 @@
             <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
             <li><a href="<%= Routes.page_path(@conn, :index) %>">Welcome Page!</a></li>
             <li><a href="<%= Routes.aliens_path(@conn, :index) %>">Aliens?</a></li>
+            <li><a href="<%= Routes.saucers_path(@conn, :index) %>">Saucers!?</a></li>
           </ul>
         </nav>
         <a href="http://phoenixframework.org/" class="phx-logo">
