--- a/lib/alien_demo_web/templates/layout/app.html.eex
+++ b/lib/alien_demo_web/templates/layout/app.html.eex
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>AlienDemo · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script>window.userToken = "<%= assigns[:user_token] %>";</script>
   </head>
   <body>
     <header>
