--- a/lib/alien_demo_web/templates/layout/app.html.eex
+++ b/lib/alien_demo_web/templates/layout/app.html.eex
@@ -35,9 +35,10 @@
         </div>
         <div style="width:33%;margin:0 0.5em;max-height:40em;min-height:10em;height:40em">
           <div style="max-height:80%;height:80%;border: 0.25rem purple solid;padding:0 0.5em;overflow-y:scroll;" id="chat-output"></div>
-          <div style="height:20%;width:100%;margin-top:0.5em;">
+          <div style="height:10%;width:100%;margin-top:0.5em;">
             <input id="chat-input" type="text"/>
           </div>
+          <div style="height:10%;" id="chat-presence"></div>
         </div>
       </div>
     </main>
